2011-06-17 Magnus Hagdorn
 * configure.in: set F77 to FC if not set; fix generation of files
 * tests/exact-isothermal/src/Makefile.am: minor change

2011-06-16 William Lipscomb
  * I had previously changed the name of glimmer_writestats_module to glimmer_writestats
    to satisfy the CESM convention that module and file names should agree.
    I had also changed subroutine glimmer_writestats to glimmer_write_stats so that it
    would not conflict with the new module name.
    With this commit I changed use statements and subroutine calls in various modules accordingly.
  * Commented out references to CESM restart code in glint_initialise.F90.
    Will find a more flexible solution later.
  * Changed Makefile.am in libglint and example_drivers/glint/src, to reflect that
    glint_example_clim.F90 has been moved to libglint
	
2010-06-16 William Lipscomb
  * Remove use of CESM shared code in glimmer_config.F90.
    (This code was used to specify a fileunit for reading config files.)
    Instead, pass the desired fileunit in argument lists.
	
2010-06-16 Magnus Hagdorn
 * update copyright years to the years where the files were modified according
   to svn log

2010-06-16 Magnus Hagdorn
 * Makefile.am: conditionally add libphaml directory
 * configure.in: always generate libphaml/Makefile

2010-06-15 William Lipscomb
 * Checked in the contents of the CESM source_glimmer-cism directory.
 * These include most of the *F90 and *vars_def files in the libglimmer,
   libglimmer-solve, libglide, and libglint directories (but not the 
   files that are programs, since these will not compile in CESM).
 * I updated the copyright notice in all the files I checked in.
   The dates are listed as "2004, 2005, 2006, 2007, 2008, 2009, 2010".
   Magnus has offered to go through each file and include only years
   during which the files changed.
 * I also implemented several changes suggested by Rupert Gladstone to
   make the GCM interfaces cleaner and more generic.  A more extensive