@@ -1,28 +1,3 @@
-#! /usr/bin/env python
-
-# Copyright (C) 2009
-# Glimmer-CISM contributors - see AUTHORS file for list of contributors
-#
-# This file is part of Glimmer-CISM.
-#
-# Glimmer-CISM is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 2 of the License, or (at
-# your option) any later version.
-#
-# Glimmer-CISM is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with Glimmer-CISM.  If not, see <http://www.gnu.org/licenses/>.
-#
-# Glimmer-CISM is hosted on BerliOS.de:
-# https://developer.berlios.de/projects/glimmer-cism/
-
-# python script for analysing module dependencies of a number of f90/f95 programs
-
 # simple shell script to be used with SGE for launching glide
 # tell SGE to change into current working directory
 #$-cwd
